<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">UnPixelate</string>

    <string name="title_activity_game_screen">UnPixelate</string>
    <string name="movesLabel">You have %d moves!</string>
    <string name="cyanButton">Cyan Button</string>
    <string name="greenButton">Green Button</string>
    <string name="redButton">Red Button</string>
    <string name="yellowButton">Yellow Button</string>
    <string name="backButton">Back</string>
    <string name="blueButton">Blue Button</string>
    <string name="banner">Banner</string>
    <string name="startButton">Start Game!</string>
    <string name="howToButton">How to Play?</string>
    <string name="title_activity_settings">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-4253179676056693/1503619483</string>
    <string name="action_settings">Settings</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_about">About</string>
    <string name="numberOfMoves">You have %d moves!</string>
    <string name="buttonStartHowTo">Let\'s play!</string>
    <string name="howToImage">How to image</string>
    <string name="vibration">Vibration</string>
    <string name="difficulty">Difficulty</string>
    <string name="wasteMoves">Why are you wasting your moves?</string>
    <string name="noMoreMoves">No more moves left!</string>


    <string name="youWinButton">Back</string>
    <string name="settingsPopUp">Settings</string>
    <string name="tutorialExplanation">You have the top-left box. \n
        You need to use the buttons on the bottom to change your \n
        color and UnPixelate the pixelated view! \n
        Do not forget, you have limited amount of moves! \n
        To help you, this is tutorial mode.\n
        The arrows will show you the moves and you
        can see which boxes are yours.\n
        Your boxes will be marked with an icon.</string>


    <string name="youWinToast">Congratulations, you win!!</string>
    <string name="youLostToast">You lost, maybe next time?</string>
    <string name="deleteProgressBtn">Delete progress.</string>
    <string name="deleteProgress">Okay, you can have a fresh start now!</string>


    <string name="title_send_feedback">Send Feedback</string>
    <string name="mail_feedback_email">anilreyhan@gmail.com</string>
    <string name="mail_feedback_subject">Feedback about UnPixelate</string>
    <string name="mail_feedback_message">Hi,\n\nPerfect game! But I have some feedbacks!\n \n \n</string>
    <string name="youLostButton">Back</string>
    <string name="feedbackToast">Please send your feedback via email.</string>

    <string name="winScreenQuit">Okay, I\'m bored.</string>
    <string name="winScreenPlay">Let\'s play another one!</string>


    <string name="movesPassed">You have %d moves. Those will be added in the next level.</string>

    <string name="banner_ad_unit_id_tutorial">ca-app-pub-4253179676056693/1073265600</string>
    <string name="tutorialCongrats">Congratulations, you did it!</string>
    <string name="letsPlay">Let\'s Play!</string>
    <string name="tutorialExplanationButton">Got it!</string>
    <string name="doNotShowAgainText">Don\'t show again.</string>
    <string name="youLostText">Sorry, you lost.. Maybe next time?</string>
    <string name="scoreText">Your score is: %d !</string>
    <string name="highScoreText">High Score: %d</string>
    <string name="exitButton">Back to main menu</string>

    <string-array name="difficulty_array">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>


</resources>














