<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.anilreyhan.unpixelate.TutorialActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movesLeftTutorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/movesLabel"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.anilreyhan.unpixelate.New.TutorialView
            android:id="@+id/gameLayoutTutorial"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            >


            <ImageButton
                android:id="@+id/blueButtonTutorial"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/blueButton"
                android:src="@color/blue"
                android:clickable="true"/>

            <ImageButton
                android:id="@+id/cyanButtonTutorial"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/cyanButton"
                android:src="@color/cyan"
                android:clickable="true"/>

            <ImageButton
                android:id="@+id/greenButtonTutorial"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/greenButton"
                android:src="@color/green"
                android:clickable="true" />

            <ImageButton
                android:id="@+id/redButtonTutorial"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/redButton"
                android:src="@color/red"
                android:clickable="true" />

            <ImageButton
                android:id="@+id/yellowButtonTutorial"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/yellowButton"
                android:src="@color/yellow"
                android:clickable="true" />


        </LinearLayout>

    </LinearLayout>


    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewTutorial"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id_tutorial">

    </com.google.android.gms.ads.AdView>


</RelativeLayout>
