<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.anilreyhan.unpixelate.GameScreen"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">


    <ImageButton
        android:id="@+id/blueButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/blueButton"
        app:srcCompat="@color/blue"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/gameLayout" />

    <ImageButton
        android:id="@+id/cyanButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:contentDescription="@string/cyanButton"
        app:srcCompat="@color/cyan"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toRightOf="@+id/blueButton"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/gameLayout"
        app:layout_constraintRight_toLeftOf="@+id/greenButton"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginEnd="8dp" />

    <ImageButton
        android:id="@+id/greenButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/greenButton"
        android:elevation="0dp"
        app:srcCompat="@color/green"
        app:layout_constraintRight_toLeftOf="@+id/redButton"
        app:layout_constraintLeft_toRightOf="@+id/cyanButton"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/gameLayout" />

    <ImageButton
        android:id="@+id/redButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/greenButton"
        app:srcCompat="@color/red"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toLeftOf="@+id/yellowButton"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/gameLayout"
        app:layout_constraintLeft_toRightOf="@+id/greenButton"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <ImageButton
        android:id="@+id/yellowButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/yellowButton"
        app:srcCompat="@color/yellow"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/gameLayout" />

    <TextView
        android:id="@+id/movesLeft"
        android:layout_width="298dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/movesLabel"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/backButton"
        app:srcCompat="?attr/actionModeCloseDrawable"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toLeftOf="@+id/movesLeft"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="348dp"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_marginRight="28dp"
        ads:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        ads:layout_constraintLeft_toLeftOf="parent"
        ads:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="0dp"
        ads:layout_constraintTop_toBottomOf="@+id/greenButton">

    </com.google.android.gms.ads.AdView>

    <GridView
        android:id="@+id/gameLayout"
        android:layout_width="346dp"
        android:layout_height="337dp"
        android:layout_marginTop="12dp"
        android:numColumns="10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movesLeft" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal" />


</android.support.constraint.ConstraintLayout>
