<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.anilreyhan.unpixelate.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    android:background="@color/backgroundColor">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="422dp"
        app:srcCompat="@drawable/unpixelate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/banner"
        app:layout_constraintHorizontal_bias="1.0" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/startButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/howToButton"
        app:layout_constraintBaseline_toBaselineOf="@+id/howToButton"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/howToButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/howToButton"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintRight_toLeftOf="@+id/startButton"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.186"
        android:textAllCaps="false"/>


</android.support.constraint.ConstraintLayout>
