<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.anilreyhan.unpixelate.Tutorial.WinScreenTutorial"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/tutorialCongratsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tutorialCongrats"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/videoViewTutorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <VideoView
        android:id="@+id/videoViewTutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/nextButtonTutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/letsPlay"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/videoViewTutorial"
        app:layout_constraintEnd_toStartOf="@+id/videoViewTutorial"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/videoViewTutorial"
        app:layout_constraintTop_toBottomOf="@+id/exitButtonTutorial" />

    <Button
        android:id="@+id/exitButtonTutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backButton"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/nextButtonTutorial"
        app:layout_constraintEnd_toStartOf="@+id/videoViewTutorial"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/videoViewTutorial"
        app:layout_constraintTop_toBottomOf="@+id/videoViewTutorial" />

</android.support.constraint.ConstraintLayout>
