<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.anilreyhan.unpixelate.Tutorial.TutorialExplanation"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/tutorialText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tutorialExplanation"
        android:textAllCaps="false"

        app:layout_constraintBottom_toTopOf="@+id/tutorialExplanationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tutorialExplanationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutorialExplanationButton"

        app:layout_constraintBottom_toTopOf="@+id/soundSettingsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutorialText" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/soundSettingsLayout"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutorialExplanationButton">

        <TextView
            android:id="@+id/doNotShowAgainText"
            android:layout_width="192dp"
            android:layout_height="27dp"
            android:foregroundGravity="left"
            android:gravity="center"
            android:text="@string/doNotShowAgainText"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tutorialExplanationCB"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/tutorialExplanationCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/doNotShowAgainText"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
